--- a/eMKParty.BackOffice.Support.Web.Razor/Pages/Shared/_BackOfficeLayout.cshtml
+++ b/eMKParty.BackOffice.Support.Web.Razor/Pages/Shared/_BackOfficeLayout.cshtml
@@ -42,7 +42,7 @@
         <!-- Main Header -->
         <header class="main-header">
             <!-- Logo -->
-            <a href="index2.html" class="logo">
+            <a href="#" class="logo">
                 <!-- mini logo for sidebar mini 50x50 pixels -->
                 @*<span class="logo-mini"><b>M</b>K</span>
         <span class="logo-mini"><b>M</b>K</span>*@
@@ -55,39 +55,18 @@
             <!-- Header Navbar -->
             <nav class="navbar navbar-static-top" role="navigation">
                 <!-- Sidebar toggle button-->
-                <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
+                @*<a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
                     <span class="sr-only">Toggle navigation</span> 
-                </a>
+                </a>*@
                 <!-- Navbar Right Menu -->
-                <div class="navbar-custom-menu">
+                @*<div class="navbar-custom-menu">
                     <ul class="nav navbar-nav">
-                        <!-- User Account Menu -->
                         <li class="dropdown user user-menu">
-                            <!-- Menu Toggle Button -->
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <!-- The user image in the navbar-->
                                 <img src="~/lib/themes/AdminLTE/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                                <!-- hidden-xs hides the username on small devices so only the image appears. -->
                                 <span class="hidden-xs">Shehryar khan</span>
                             </a>
                             <ul class="dropdown-menu">
-                                <!-- The user image in the menu -->
-                                @*<li class="user-header">
-                                    <img src="~/lib/themes/AdminLTE/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-                                    <p>
-                                        Shehryar khan - Coding Infinite
-                                        <small>Member since Nov. 2012</small>
-                                    </p>
-                                </li>*@
-                                <!-- Menu Body -->
-                                @*<li class="user-body">
-                                    <div class="row">
-                                        <div class="col-xs-4 text-center">
-                                            <a href="#">Account</a>
-                                        </div>
-                                    </div>
-                                </li>*@
-                                <!-- Menu Footer-->
                                 <li class="user-footer">
                                     <div class="pull-left">
                                         <a href="#" class="btn btn-default btn-flat">My Profile</a>
@@ -99,7 +78,7 @@
                             </ul>
                         </li>
                     </ul>
-                </div>
+                </div>*@
             </nav>
         </header>
         <!-- Left side column. contains the logo and sidebar -->
@@ -145,7 +124,7 @@
         <!-- Main Footer -->
         <footer class="main-footer">
             <!-- Default to the left -->
-            <strong>Copyright © 2023 <a href="https://gcwabetech.co.za/">Gcwabe Tech Resources</a>.</strong> All rights reserved.
+            <strong>Copyright &#169 @DateTime.Now.Year <a href="https://gcwabetech.co.za/">Gcwabe Tech Resources</a>.</strong> All rights reserved.
         </footer>
     </div>
 
