--- a/eMKParty.BackOffice.Support.Web.Razor/Pages/Account/WelcomeSuccess.cshtml
+++ b/eMKParty.BackOffice.Support.Web.Razor/Pages/Account/WelcomeSuccess.cshtml
@@ -7,7 +7,7 @@
 <div class="text-center" style="margin-top:10px;">
     <h1 class="display-4">MK - uMkhonto weSizwe Party Welcome New Member</h1>
     <p>
-        uMkhonto weSizwe Party, would like to welcome you. And thank you for registering and trusting our movement.
+        uMkhonto weSizwe Party, would like to welcome you. and thank you for registering and trusting our movement.
     </p>
 
     <a asp-area="" asp-page="/Account/RegisterMember" class="btn btn-success btn-lg">Register New Member</a>
