--- a/eMKParty.BackOffice.Support.Web.Razor/Pages/Account/RegisterMember.cshtml
+++ b/eMKParty.BackOffice.Support.Web.Razor/Pages/Account/RegisterMember.cshtml
@@ -12,200 +12,197 @@
     </p>
 </div>
 
-
-
-<div class="panel panel-success" style="margin-top:10px;">
-    <div class="panel-heading">
-        <h4 class="panel-title"><i class="glyphicon glyphicon-list"></i> Member Registration</h4>
-    </div>
-    <form method="post">
-        <div class="form-group" style="margin:10px;">
-            <div asp-validation-summary="All" class="text-danger"></div>
-
-            <div class="col-lg-4">
-                <div class="form-group">
-                    <label class="form-label">First Name(s)</label>
-                    <input asp-for="User.name" type="text" class="form-control" />
-                    <span class="text-danger" asp-validation-for="User.name"></span>
-                </div>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="form-group">
-                    <label class="form-label">Surname</label>
-                    <input asp-for="User.surname" class="form-control" />
-                    <span class="text-danger" asp-validation-for="User.surname"></span>
-                </div>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="form-group">
-                    <label class="form-label">South African ID No</label>
-                    <input asp-for="User.id_no" class="form-control" />
-                    <span class="text-danger" asp-validation-for="User.id_no"></span>
-                </div>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="form-group">
-                    <label class="control-label">Gender</label>
-                    <select asp-for="User.gender" class="form-control"
-                            asp-items="@Model.GenderLS">
-                        <option value="">-- Select Gender --</option>
-                    </select>
-                    <span class="text-danger" asp-validation-for="User.gender"></span>
-                </div>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="form-group">
-                    <label class="control-label">Preferred Language</label>
-                    <select asp-for="User.prefered_lang" class="form-control"
-                            asp-items="@Model.PreferredLanguageLS">
-                        <option value="">-- Select Preferred Language --</option>
-                    </select>
-                    <span class="text-danger" asp-validation-for="User.prefered_lang"></span>
-                </div>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="form-group">
-                    <label class="form-label">Cellphone No</label>
-                    <input asp-for="User.mobile" class="form-control" />
-                    <span class="text-danger" asp-validation-for="User.mobile"></span>
-                </div>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="form-group">
-                    <label class="form-label">Email</label>
-                    <input asp-for="User.email" type="email" class="form-control" />
-                    <span class="text-danger" asp-validation-for="User.email"></span>
-                </div>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="form-group">
-                    <label class="form-label">Tel</label>
-                    <input asp-for="User.tel" class="form-control" />
-                    <span class="text-danger" asp-validation-for="User.tel"></span>
-                </div>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="form-group">
-                    <label class="form-label">Residential Address</label>
-                    <input asp-for="User.building_site_no" class="form-control" />
-                    <span class="text-danger" asp-validation-for="User.building_site_no"></span>
-                </div>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="form-group">
-                    <label class="form-label">Suburb/Village</label>
-                    <input asp-for="User.suburb" class="form-control" />
-                    <span class="text-danger" asp-validation-for="User.suburb"></span>
-                </div>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="form-group">
-                    <label class="form-label">City/Town</label>
-                    <input asp-for="User.city" class="form-control" />
-                    <span class="text-danger" asp-validation-for="User.city"></span>
-                </div>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="form-group">
-                    <label class="form-label">Postal Code</label>
-                    <input asp-for="User.postal_code" class="form-control" />
-                    <span class="text-danger" asp-validation-for="User.postal_code"></span>
-                </div>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="form-group">
-                    <label class="control-label">Race</label>
-                    <select asp-for="User.race" class="form-control"
-                            asp-items="@Model.RaceSL">
-                        <option value="">-- Select Race --</option>
-                    </select>
-                    <span class="text-danger" asp-validation-for="User.race"></span>
-                </div>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="form-group">
-                    <label class="control-label">Employment Status</label>
-                    <select asp-for="User.employment_status" class="form-control"
-                            asp-items="@Model.EmploymentSL">
-                        <option value="">-- Select Employment Status --</option>
-                    </select>
-                    <span class="text-danger" asp-validation-for="User.employment_status"></span>
-                </div>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="form-group">
-                    <label class="control-label">Province</label>
-                    <select asp-for="User.province_name" class="form-control"
-                            asp-items="@Model.ProvincesSL">
-                        <option value="">-- Select Province --</option>
-                    </select>
-                    <span class="text-danger" asp-validation-for="User.province_name"></span>
-                </div>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="form-group">
-                    <label class="control-label">Municipality</label>
-                    <select asp-for="User.municipality_name" class="form-control"
-                            asp-items="@Model.MunicipalitiesSL.OrderBy(i => i.Text)">
-                        <option value="">-- Select Municipality --</option>
-                    </select>
-                    <span class="text-danger" asp-validation-for="User.municipality_name"></span>
-                </div>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="form-group">
-                    <label class="control-label" for="card-number">Ward</label>
-                    <select asp-for="User.ward_name" class="form-control"
-                            asp-items="@Model.WardsSL">
-                        <option value="0">-- Select Ward --</option>
-                    </select>
-                    <span class="text-danger" asp-validation-for="User.ward_name"></span>
-                </div>
-            </div>
-
-            <div class="col-lg-12">
-                <div class="form-group">
-                    <button type="submit" class="btn btn-success" style="width:150px;">
-                        <i class="glyphicon glyphicon-floppy-disk"></i> &nbsp;
-                        Save Information
-                    </button>
-                </div>
-            </div>
-
-
-            @*<div class="col-lg-12">
-            <div class="form-group">
-                <button type="submit" class="btn btn-success btn-lg" style="width:150px;">
-                    <i class="glyphicon glyphicon-floppy-disk"></i> &nbsp;
-                    Save Information
-                </button>
-            </div>
-        </div>*@
-
+    <div class="panel panel-success" style="margin-top:10px;">
+        <div class="panel-heading">
+            <h4 class="panel-title"><i class="glyphicon glyphicon-list"></i> New Member Registration</h4>
         </div>
-</form>
-</div>
+        <form method="post">
+            <div class="form-group" style="margin:10px;">
+                <div asp-validation-summary="All" class="text-danger"></div>
+
+                <div class="col-lg-4">
+                    <div class="form-group">
+                        <label class="form-label">First Name(s)</label>
+                        <input asp-for="User.name" type="text" class="form-control" />
+                        <span class="text-danger" asp-validation-for="User.name"></span>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="form-group">
+                        <label class="form-label">Surname</label>
+                        <input asp-for="User.surname" class="form-control" />
+                        <span class="text-danger" asp-validation-for="User.surname"></span>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="form-group">
+                        <label class="form-label">South African ID No</label>
+                        <input asp-for="User.id_no" class="form-control" />
+                        <span class="text-danger" asp-validation-for="User.id_no"></span>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="form-group">
+                        <label class="control-label">Gender</label>
+                        <select asp-for="User.gender" class="form-control"
+                                asp-items="@Model.GenderLS">
+                            <option value="">-- Select Gender --</option>
+                        </select>
+                        <span class="text-danger" asp-validation-for="User.gender"></span>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="form-group">
+                        <label class="control-label">Preferred Language</label>
+                        <select asp-for="User.prefered_lang" class="form-control"
+                                asp-items="@Model.PreferredLanguageLS">
+                            <option value="">-- Select Preferred Language --</option>
+                        </select>
+                        <span class="text-danger" asp-validation-for="User.prefered_lang"></span>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="form-group">
+                        <label class="form-label">Cellphone No</label>
+                        <input asp-for="User.mobile" class="form-control" />
+                        <span class="text-danger" asp-validation-for="User.mobile"></span>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="form-group">
+                        <label class="form-label">Email</label>
+                        <input asp-for="User.email" type="email" class="form-control" />
+                        <span class="text-danger" asp-validation-for="User.email"></span>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="form-group">
+                        <label class="form-label">Tel</label>
+                        <input asp-for="User.tel" class="form-control" />
+                        <span class="text-danger" asp-validation-for="User.tel"></span>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="form-group">
+                        <label class="form-label">Residential Address</label>
+                        <input asp-for="User.building_site_no" class="form-control" />
+                        <span class="text-danger" asp-validation-for="User.building_site_no"></span>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="form-group">
+                        <label class="form-label">Suburb/Village</label>
+                        <input asp-for="User.suburb" class="form-control" />
+                        <span class="text-danger" asp-validation-for="User.suburb"></span>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="form-group">
+                        <label class="form-label">City/Town</label>
+                        <input asp-for="User.city" class="form-control" />
+                        <span class="text-danger" asp-validation-for="User.city"></span>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="form-group">
+                        <label class="form-label">Postal Code</label>
+                        <input asp-for="User.postal_code" class="form-control" />
+                        <span class="text-danger" asp-validation-for="User.postal_code"></span>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="form-group">
+                        <label class="control-label">Race</label>
+                        <select asp-for="User.race" class="form-control"
+                                asp-items="@Model.RaceSL">
+                            <option value="">-- Select Race --</option>
+                        </select>
+                        <span class="text-danger" asp-validation-for="User.race"></span>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="form-group">
+                        <label class="control-label">Employment Status</label>
+                        <select asp-for="User.employment_status" class="form-control"
+                                asp-items="@Model.EmploymentSL">
+                            <option value="">-- Select Employment Status --</option>
+                        </select>
+                        <span class="text-danger" asp-validation-for="User.employment_status"></span>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="form-group">
+                        <label class="control-label">Province</label>
+                        <select asp-for="User.province_name" class="form-control"
+                                asp-items="@Model.ProvincesSL">
+                            <option value="">-- Select Province --</option>
+                        </select>
+                        <span class="text-danger" asp-validation-for="User.province_name"></span>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="form-group">
+                        <label class="control-label">Municipality</label>
+                        <select asp-for="User.municipality_name" class="form-control"
+                                asp-items="@Model.MunicipalitiesSL.OrderBy(i => i.Text)">
+                            <option value="">-- Select Municipality --</option>
+                        </select>
+                        <span class="text-danger" asp-validation-for="User.municipality_name"></span>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="form-group">
+                        <label class="control-label" for="card-number">Ward</label>
+                        <select asp-for="User.ward_name" class="form-control"
+                                asp-items="@Model.WardsSL">
+                            <option value="0">-- Select Ward --</option>
+                        </select>
+                        <span class="text-danger" asp-validation-for="User.ward_name"></span>
+                    </div>
+                </div>
+
+                <div class="col-lg-12">
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-success" style="width:150px;">
+                            <i class="glyphicon glyphicon-floppy-disk"></i> &nbsp;
+                            Save Information
+                        </button>
+                    </div>
+                </div>
 
 
-@*<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">*@
+                @*<div class="col-lg-12">
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-success btn-lg" style="width:150px;">
+                                <i class="glyphicon glyphicon-floppy-disk"></i> &nbsp;
+                                Save Information
+                            </button>
+                        </div>
+                    </div>*@
+
+            </div>
+        </form>
+    </div>
+
+    @*<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">*@
 
 
 
