--- a/eMKParty.BackOffice.Support.Web.Razor/Pages/Shared/_BasicLayout.cshtml
+++ b/eMKParty.BackOffice.Support.Web.Razor/Pages/Shared/_BasicLayout.cshtml
@@ -6,23 +6,26 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>@ViewData["Title"]</title>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
-    <!------ Include the above in your HEAD tag ---------->
+    @*<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">*@
 
-    @*<style type="text/css">        
-        body{background:#f9f9f9;}
-        #wrapper{padding:90px 15px;}
-        .navbar-expand-lg .navbar-nav.side-nav{flex-direction: column;}
-        .card{margin-bottom: 15px; border-radius:0; box-shadow: 0 3px 5px rgba(0,0,0,.1); }
-        .header-top{box-shadow: 0 3px 5px rgba(0,0,0,.1)}
-        .navbar-nav.side-nav{background: #585f66;box-shadow: 2px 1px 2px rgba(0,0,0,.1);
-                             position:fixed;top:56px;
-                             flex-direction: column!important;
-                             left:0;width:200px;overflow-y:auto;
-                             bottom:0;overflow-x:hidden;padding-bottom:40px}
-    </style>*@
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+
+    <!------ Include the above in your HEAD tag ---------->
+    @*<style type="text/css">
+            body{background:#f9f9f9;}
+            #wrapper{padding:90px 15px;}
+            .navbar-expand-lg .navbar-nav.side-nav{flex-direction: column;}
+            .card{margin-bottom: 15px; border-radius:0; box-shadow: 0 3px 5px rgba(0,0,0,.1); }
+            .header-top{box-shadow: 0 3px 5px rgba(0,0,0,.1)}
+            .navbar-nav.side-nav{background: #585f66;box-shadow: 2px 1px 2px rgba(0,0,0,.1);
+                                 position:fixed;top:56px;
+                                 flex-direction: column!important;
+                                 left:0;width:200px;overflow-y:auto;
+                                 bottom:0;overflow-x:hidden;padding-bottom:40px}
+        </style>*@
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper">
