--- a/eMKParty.BackOffice.Support.Web.Razor/Pages/Account/LoginUser.cshtml
+++ b/eMKParty.BackOffice.Support.Web.Razor/Pages/Account/LoginUser.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model eMKParty.BackOffice.Support.Web.Razor.Pages.Account.LoginUserModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Login";
     Layout = "_BasicLayout";
 }
 
