--- a/eMKParty.BackOffice.Support.Web.Razor/Pages/Account/WelcomeSuccess.cshtml
+++ b/eMKParty.BackOffice.Support.Web.Razor/Pages/Account/WelcomeSuccess.cshtml
@@ -10,5 +10,6 @@
         uMkhonto weSizwe Party, would like to welcome you. and thank you for registering and trusting our movement.
     </p>
 
-    <a asp-area="" asp-page="/Account/RegisterMember" class="btn btn-success btn-lg">Register New Member</a>
+    <a asp-area="" asp-page="/Account/RegisterMember" class="btn btn-success btn-lg"><i class="glyphicon glyphicon-cog"></i> &nbsp;Register New Member</a>
+    <a asp-area="" asp-page="/Account/LoginUser" class="btn btn-info btn-lg disabled" style="width:180px"><i class="glyphicon glyphicon-lock"></i> &nbsp;Login</a>
 </div>
