--- a/eMKParty.BackOffice.Support.Web.Razor/Pages/Account/RegisterMember.cshtml
+++ b/eMKParty.BackOffice.Support.Web.Razor/Pages/Account/RegisterMember.cshtml
@@ -18,7 +18,7 @@
         </div>
         <form method="post">
             <div class="form-group" style="margin:10px;">
-                <div asp-validation-summary="All" class="text-danger"></div>
+                @*<div asp-validation-summary="All" class="text-danger"></div>*@
 
                 <div class="col-lg-4">
                     <div class="form-group">
@@ -179,7 +179,7 @@
 
                 <div class="col-lg-12">
                     <div class="form-group">
-                        <button type="submit" class="btn btn-success" style="width:150px;">
+                        <button type="submit" class="btn btn-success btn-lg" style="width:150px;">
                             <i class="glyphicon glyphicon-floppy-disk"></i> &nbsp;
                             Save Information
                         </button>
