--- a/eMKParty.BackOffice.Support.Web.Razor/Pages/Index.cshtml
+++ b/eMKParty.BackOffice.Support.Web.Razor/Pages/Index.cshtml
@@ -11,14 +11,15 @@
         Welcome to <b>uMkhonto weSizwe Party</b>, a powerful force dedicated to bringing about positive change and progress in society. As a true liberation movement, we stand for the people, by the people, and with the people.
     </p>
 
-    <a asp-area="" asp-page="/Account/RegisterMember" class="btn btn-success btn-lg">Register New Member</a>
+    <a asp-area="" asp-page="/Account/RegisterMember" class="btn btn-success btn-lg"><i class="glyphicon glyphicon-cog"></i> &nbsp;Register New Member</a>
+    <a asp-area="" asp-page="/Account/LoginUser" class="btn btn-info btn-lg disabled" style="width:180px"><i class="glyphicon glyphicon-lock"></i> &nbsp;Login</a>
 
     @*<div class="col-lg-12">
-        <div class="form-group">
-            <button type="submit" class="btn btn-success btn-lg" style="width:200px;">
-                Register New Member
-            </button>
-        </div>
-    </div>*@
+            <div class="form-group">
+                <button type="submit" class="btn btn-success btn-lg" style="width:200px;">
+                    Register New Member
+                </button>
+            </div>
+        </div>*@
 </div>
 
