--- a/eMKParty.BackOffice.Support.Web.Razor/Pages/BackOffice/Incidents/Capture.cshtml
+++ b/eMKParty.BackOffice.Support.Web.Razor/Pages/BackOffice/Incidents/Capture.cshtml
@@ -24,7 +24,7 @@
                 </div><!-- /.col -->
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item"><a href="/BackOffice/Incidents/Index">Incidents</a></li>
+                        <li class="breadcrumb-item"><a href="~/BackOffice/Incidents/Index">Incidents</a></li>
                         <li class="breadcrumb-item active">Incident Capturing Form</li>
                     </ol>
                 </div><!-- /.col -->
