--- a/eMKParty.BackOffice.Support.Web.Razor/Pages/BackOffice/VotingResults/Capture.cshtml
+++ b/eMKParty.BackOffice.Support.Web.Razor/Pages/BackOffice/VotingResults/Capture.cshtml
@@ -13,7 +13,7 @@
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="/BackOffice/VotingResults/Index">Voting Results</a></li>
+                    <li class="breadcrumb-item"><a href="~/BackOffice/VotingResults/Index">Voting Results</a></li>
                     <li class="breadcrumb-item active">Voting Results Capturing Form</li>
                 </ol>
             </div><!-- /.col -->
