--- a/eMKParty.BackOffice.Support.Web.Razor/Pages/BackOffice/VotingResults/Index.cshtml
+++ b/eMKParty.BackOffice.Support.Web.Razor/Pages/BackOffice/VotingResults/Index.cshtml
@@ -14,7 +14,7 @@
                 </div><!-- /.col -->
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item"><a href="/BackOffice/Dashboard">Dashboard</a></li>
+                        <li class="breadcrumb-item"><a href="~/BackOffice/Dashboard">Dashboard</a></li>
                         <li class="breadcrumb-item active">Voting Results Management</li>
                     </ol>
                 </div><!-- /.col -->
