--- a/eMKParty.BackOffice.Support.Web.Razor/Pages/Shared/_BackOfficeMainLayout.cshtml
+++ b/eMKParty.BackOffice.Support.Web.Razor/Pages/Shared/_BackOfficeMainLayout.cshtml
@@ -159,7 +159,7 @@
                 </li>*@
 
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="dropdown" asp-area="" asp-page="/Account/Logout">
+                    <a class="nav-link" data-toggle="dropdown" href="~/Account/Logout">
                         <i class="fas fa-power-off	"></i>
                         @*<span class="badge badge-warning navbar-badge">15</span>*@
                     </a>
